[SCAL-470] Fixed tooltip position & increased z-index for 'f-dropdown' css class from 1000 to 1006

--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -15,11 +15,12 @@ input[type=submit].button {
   background-color: darken( #e9e9e9, 18% );
 }
 
+$margin-top: 50px;
 #wrapper {
   position: relative;
   max-width: 960px;
   background: url(image_path('bg03.jpg')) repeat;
-  margin-top: 50px;
+  margin-top: $margin-top;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 5px;
@@ -602,4 +603,8 @@ table.simulations {
 textarea {
   max-height: 500px;
   max-width: 500px;
+}
+
+span.tooltip {
+  margin-top: -$margin-top;
 }
